--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <div class="title mt-5">
             <h2 class="m-auto "> <i class="fa-solid fa-bookmark"></i>Bookmark your favorite sites<i class="fa-solid fa-bookmark"></i></h2>
             <label for="I1"><i class="fa-solid fa-book-bookmark pe-2"></i> Site Name</label>
-            <input type="text" onkeyup="getInput(this.value)" class="form-control " id="I1">
+            <input type="text" placeholder="Bookmark Name" onkeyup="getInput(this.value)" class="form-control " id="I1">
             <label for="I2"><i class="fa-solid fa-link pe-2"></i> Site URL</label>
-            <input type="text" onkeyup="getInput2(this.value)" class="form-control" id="I2">
+            <input type="text" placeholder="Website URL" onkeyup="getInput2(this.value)" class="form-control" id="I2">
             <button onclick="getValue()" class="btn btn-danger m-auto text-center d-flex my-3">Submit</button>
         </div>
         <div class="inputTable mt-4">
